--- a/package.yaml
+++ b/package.yaml
@@ -7,3 +7,14 @@ library:
   source-dirs: src
   dependencies:
     - doctest
+
+tests:
+  doctests:
+    source-dirs: doctests
+    main: Main.hs
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - doctest
