Configure default extensions for `cabal-docspec`

--- a/package.yaml
+++ b/package.yaml
@@ -5,8 +5,14 @@ dependencies:
 
 library:
   source-dirs: src
+
+  default-extensions:
+    - OverloadedStrings
+    - DataKinds
+
   dependencies:
     - aeson
+
   x-docspec-extra-packages: aeson
 
 tests:
