--- a/doctest-samples.cabal
+++ b/doctest-samples.cabal
@@ -15,6 +15,8 @@ library
       Paths_doctest_samples
   hs-source-dirs:
       src
+  default-extensions:
+      OverloadedStrings
   build-depends:
       aeson
     , base >=4.7 && <5
