Trying out `hspec` verbatims

--- a/package.yaml
+++ b/package.yaml
@@ -13,7 +13,10 @@ library:
   dependencies:
     - aeson
 
-  x-docspec-extra-packages: aeson
+  verbatim:
+    x-docspec-options: |
+     -XOverloadedStrings
+     -XDataKinds
 
 tests:
   docspecs:
